--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "svix": "^1.15.0",
