--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.3",
     "recharts": "^2.12.0",
     "svix": "^1.15.0",
