--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -54,8 +55,10 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
+    "react-excel-renderer": "^1.1.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.3",
+    "read-excel-file": "^5.7.1",
     "recharts": "^2.12.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
