--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
@@ -35,7 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -52,8 +52,9 @@
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-calendar": "^6.0.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "18.2.0",
     "react-excel-renderer": "^1.1.0",
     "react-feather": "^2.0.10",
