--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.1",
+    "framer-motion": "^12.19.1",
     "html-react-parser": "^5.0.11",
     "lucide-react": "^0.309.0",
     "mongodb": "^6.3.0",
@@ -59,8 +60,9 @@
     "react-excel-renderer": "^1.1.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.3",
+    "react-tooltip": "^4.5.1",
     "read-excel-file": "^5.7.1",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.4.1",
