--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.19.1",
     "html-react-parser": "^5.0.11",
     "lucide-react": "^0.309.0",
@@ -69,10 +70,12 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/uuid": "^9.0.8"
   }
 }
