ticket system done

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.6.0",
@@ -48,6 +49,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "next": "^14.0.4",
+    "next-cloudinary": "^6.16.0",
     "npm-check-updates": "^16.14.12",
     "postcss": "8.4.33",
     "prettier": "^3.1.1",
