--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.7",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.0",
@@ -57,6 +58,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "18.2.0",
